# jcc

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  pyrightconfig.json  setup.sh
corpus/: 2048.ll  README.md  alloca_test.c  alloca_test_with_dbg.ll  correctness.ll  debug.ll  debug_test.c  debug_test_with_dbg.ll  minimal.ll  minimal_loop.ll  rusty.ll
docs/: j3r180-benchmark.html
etc/jcdk-sim-client/: JCCClient.java
examples/2048/: game.h  graphics.h  jcc.toml  jcc_fb.h  main.c
examples/8cc/: jcc.toml  main.c
examples/apple/: jcc.toml  jcc_fb.h  main.c  video.h
examples/bench/: BenchApplet.jca  build.sh  jcc.toml  results.json  results.md
examples/constructor/: jcc.toml  main.c
examples/correctness/: jcc.toml  main.c  test_fillrect.h  test_font_lookup.h  test_frame1.h  test_object_pool.h  test_rendering.h
examples/doom/: bsp.h  collision.h  combat.h  config.h  doom.h  enemy.h  jcc.toml  jcc_fb.h  jcc_log.h  justfile  main.c  math.h  mobj.h  movement.h  sight.h  sprite.h  tests.h  trig.h  weapon.h
examples/flappy/: game.h  graphics.h  jcc.toml  jcc_fb.h  main.c
examples/minimal/: jcc.toml  main.c
examples/musicvideo/: jcc.toml  jcc_fb.h  main.c  music.h  operator.h  player.h  song.mid  synth.h  (+2 more)
include/: jcc.h
tests/: __init__.py  conftest.py  test_aid.py  test_all_features_runtime.py  test_analysis_base.py  test_analysis_integration.py  test_analyzer.py  test_api_parser.py  test_api_registry.py  test_array_cache_runtime.py  test_callgraph.py  test_codegen.py  test_codegen_emit.py  test_codegen_expr.py  test_codegen_ops.py  test_codegen_phi_moves.py  test_codegen_stack.py  test_coercion.py  test_config.py  test_constant_pool.py  test_counter_runtime.py  test_dataflow.py  test_debug.py  test_descriptor.py  test_emulated_int_runtime.py  test_escape.py  test_extended_apdu_runtime.py  test_function.py  test_globals.py  test_graph_color.py  test_instructions.py  test_interference.py  test_jca.py  test_jcdk.py  test_lifecycle.py  test_locals.py  test_lower_intrinsics.py  test_lower_sext.py  test_memset_runtime.py  test_module.py  (+14 more)
tools/: run_tests.py  setup-prereqs.sh  setup.py  stack_analysis.py  verify_cap.py
(+220 files in other folders)
