[project]
name = "jcc"
version = "2.0.0"
description = "LLVM IR to JavaCard bytecode compiler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.43.0",
    "cyclopts>=3.0",
    "blessed>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.14",
]
driver = [
    "blessed>=1.20",
    "pyscard>=2.0",
    "pillow>=10.0",
]

[project.scripts]
jcc = "jcc.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 10

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
